<resources>

    <string name="app_name">Pocket Score Card</string>
    <string name="player_info">Player Info.</string>
    <string name="title_activity_main_title">Main Title</string>
    <string name="play_cont">Play / Continue</string>
    <string name="course_info">Add/Browse course</string>
    <string name="pref_basic_info">Basic Information</string>
    <string name="pref_using_clubs">Using Clubs</string>
    <string name="pref_basic_owner_name">Owner Name</string>
    <string name="pref_basic_hdcp">HDCP</string>
    <string name="pref_club_woods">Woods</string>
    <string name="pref_club_irons">Irons</string>
    <string name="pref_club_wedges">Wedges</string>
    <string name="pref_club_putter">Putter</string>
    <string name="clubname_1wood">1 wood</string>
    <string name="clubname_3wood">3 wood</string>
    <string name="clubname_4wood">4 wood</string>
    <string name="clubname_5wood">5 wood</string>
    <string name="clubname_6wood">6 wood</string>
    <string name="clubname_7wood">7 wood</string>
    <string name="pref_basic_owner_info">Owner Information</string>
    <string name="txt_btn_add_course">Add Course data</string>
    <string name="tv_course_name">Course Name</string>
    <string name="tv_course_information">Course Information</string>
    <string name="tv_hole_infomartion">Hole Information</string>
    <string name="txt_abbr_1w">1W</string>
    <string name="txt_abbr_3w">3W</string>
    <string name="txt_abbr_4w">4W</string>
    <string name="txt_abbr_5w">5W</string>
    <string name="txt_abbr_6w">6W</string>
    <string name="txt_abbr_7w">7W</string>
    <string name="txt_abbr_ut3">Ut3</string>
    <string name="txt_abbr_ut5">Ut5</string>
    <string name="txt_abbr_ut7">Ut7</string>
    <string name="txt_abbr_ut9">Ut9</string>
    <string name="txt_abbr_3i">3I</string>
    <string name="txt_abbr_4i">4I</string>
    <string name="txt_abbr_5i">5I</string>
    <string name="txt_abbr_6i">6I</string>
    <string name="txt_abbr_7i">7I</string>
    <string name="txt_abbr_8i">8I</string>
    <string name="txt_abbr_9i">9I</string>
    <string name="txt_abbr_pw">PW</string>
    <string name="txt_abbr_aw">AW</string>
    <string name="txt_abbr_sw">SW</string>
    <string name="txt_abbr_lw">LW</string>
    <string name="txt_abbr_pt">PT</string>
    <string name="tv_club_setting_type">Club Setting type</string>
    <string name="sp_setting_type_1">Setting type 1</string>
    <string name="sp_setting_type_2">Setting type 2</string>
    <string name="sp_setting_type_3">Setting type 3</string>
    <string name="app_settings">App. settings</string>
    <string name="control_flight_mode">Control Devices\'s Flight Mode Setting</string>
    <string name="check_14_clubs">Check number of clubs</string>
    <string name="desc_check_14_clubs">Show warning when number of clubs are over 14.</string>
    <string name="ignore_check_clubs">Ignore whether clubs are selected more than 15</string>
    <string name="flight_mode">Flight Mode control</string>
    <string name="disable_flight_mode_control">Disable Flight Mode control</string>
    <string name="post_course_detail">Post course detail</string>

</resources>