<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_ownerHDCP"
        android:layout_alignBottom="@+id/editText_ownerHDCP"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:text="@string/pref_basic_hdcp" />

    <TextView
        android:id="@+id/tv_ownerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/pref_basic_owner_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_ownerInfo"
        android:layout_marginTop="19dp"
        android:paddingLeft="10dp"
        android:text="@string/pref_basic_owner_name" />

    <EditText
        android:id="@+id/editText_ownerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_ownerInfo"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_ownerHDCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_ownerName"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/tv_usingClubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_ownerHDCP"
        android:text="@string/pref_using_clubs"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/lv_usingClubsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_usingClubs"
        android:layout_marginTop="18dp" >
    </ListView>

</RelativeLayout>