<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_courseName"
        android:layout_alignBottom="@+id/editText_courseName"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:text="@string/tv_course_name" />

    <ListView
        android:id="@+id/lv_courseData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_holeInformation" >

    </ListView>

    <TextView
        android:id="@+id/tv_courseInfomation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv_course_information"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_courseInfomation"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_holeInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/tv_hole_infomartion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>